backend/plans/task-1-1771409887537385463/results/task-1-1771409887537385463_output.txt
Task ID: task-1-1771409887537385463
Description: Deepseek是否发布了最新版本？数据最新日期是什么？
Status: Completed
Duration: 4m1.716402068s
Files Generated: 1
Generated Files Directory: plans/task-1-1771409887537385463/results/task-1-1771409887537385463_files

Files:
- fetch_releases.py

Agent Execution Summary:
1. classifier - 21.321922939s
   Error: failed to parse classification result: invalid character 'è' looking for beginning of value
2. planner - 22.347081798s
3. executor - 3.155717661s
4. coder - 1m48.917827668s
5. executor - 35.231913ms
   Error: command execution failed: exit status 1
Output:   File "/tmp/agent-tasks/task-1-1771409887537385463/fetch_releases.py", line 426
    f'"{release.name.replace(\'"\', \'""\')}"',  # Quote and escape quotes
                              ^
SyntaxError: unexpected character after line continuation character

6. debugger - 1m25.912319856s
7. executor - 24.755142ms
   Error: command execution failed: exit status 1
Output:   File "/tmp/agent-tasks/task-1-1771409887537385463/fetch_releases.py", line 426
    f'"{release.name.replace(\'"\', \'""\')}"',  # Quote and escape quotes
                              ^
SyntaxError: unexpected character after line continuation character

